; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_cin.c_SCR_StopCinematic.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_cin.c_SCR_StopCinematic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CL_handle = common dso_local global i32 0, align 4
@MAX_VIDEO_HANDLES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SCR_StopCinematic() #0 {
  %1 = load i32, i32* @CL_handle, align 4
  %2 = icmp sge i32 %1, 0
  br i1 %2, label %3, label %11

3:                                                ; preds = %0
  %4 = load i32, i32* @CL_handle, align 4
  %5 = load i32, i32* @MAX_VIDEO_HANDLES, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %11

7:                                                ; preds = %3
  %8 = load i32, i32* @CL_handle, align 4
  %9 = call i32 @CIN_StopCinematic(i32 %8)
  %10 = call i32 (...) @S_StopAllSounds()
  store i32 -1, i32* @CL_handle, align 4
  br label %11

11:                                               ; preds = %7, %3, %0
  ret void
}

declare dso_local i32 @CIN_StopCinematic(i32) #1

declare dso_local i32 @S_StopAllSounds(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
